--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -78,16 +78,16 @@
 </head>
 <body>
     <header>
-        <a href="/WEB/index.html" style="width: fit-content;">
+        <a href="/WEB-KURSOVA/index.html" style="width: fit-content;">
             <image class="logo" src="../icons/logo.webp"/>
         </a>
         <nav>
             <ul class="horizontal-row social-medias">
                 <ol>
-                    <a href="/WEB/index.html#concernes">Concernes</a>
+                    <a href="/WEB-KURSOVA/index.html#concernes">Concernes</a>
                 </ol>
                 <ol>
-                    <a href="/WEB/index.html#podcast">Podcast</a>
+                    <a href="/WEB-KURSOVA/index.html#podcast">Podcast</a>
                 </ol>
             </ul>
         </nav>
@@ -111,7 +111,7 @@
                 We will never share Your personal information with anyone except as described in this Privacy Policy.
                 <br/>
                 <br/>
-                Capitalized terms not defined in this Privacy Policy have the same meanings as in WhatIsMyIPAddress.com’s Website <a href="/WEB/terms-of-use/index.html">Terms of Service</a> located at terms of use. This Privacy Policy is only applicable to the Website and not to any websites of third-parties, which may have data collection, storage, and use practices and policies that differ materially from this Privacy Policy.
+                Capitalized terms not defined in this Privacy Policy have the same meanings as in WhatIsMyIPAddress.com’s Website <a href="/WEB-KURSOVA/terms-of-use/index.html">Terms of Service</a> located at terms of use. This Privacy Policy is only applicable to the Website and not to any websites of third-parties, which may have data collection, storage, and use practices and policies that differ materially from this Privacy Policy.
             </p>
         </article>
         <article>
@@ -167,10 +167,10 @@ We provide our Service Providers with the information needed for them to perform
             <nav>
                 <ul class="horizontal-row">
                     <li>
-                        <a href="/WEB/privacy-policy/index.html">Privacy Policy</a>
+                        <a href="/WEB-KURSOVA/privacy-policy/index.html">Privacy Policy</a>
                     </li>
                     <li>
-                        <a href="/WEB/terms-of-use/index.html">Terms of Use</a>
+                        <a href="/WEB-KURSOVA/terms-of-use/index.html">Terms of Use</a>
                     </li>
                 </ul>
             </nav>
