--- a/terms-of-use/index.html
+++ b/terms-of-use/index.html
@@ -78,16 +78,16 @@
 </head>
 <body>
     <header>
-        <a href="/WEB/index.html" style="width: fit-content;">
+        <a href="/WEB-KURSOVA/index.html" style="width: fit-content;">
             <image class="logo" src="../icons/logo.webp"/>
         </a>
         <nav>
             <ul class="horizontal-row social-medias">
                 <ol>
-                    <a href="/WEB/index.html#concernes">Concernes</a>
+                    <a href="/WEB-KURSOVA/index.html#concernes">Concernes</a>
                 </ol>
                 <ol>
-                    <a href="/WEB/index.html#podcast">Podcast</a>
+                    <a href="/WEB-KURSOVA/index.html#podcast">Podcast</a>
                 </ol>
             </ul>
         </nav>
@@ -244,10 +244,10 @@ The various Affiliate Advertising Programs in which WhatIsMyIPAddress.com is a p
             <nav>
                 <ul class="horizontal-row">
                     <li>
-                        <a href="/WEB/privacy-policy/index.html">Privacy Policy</a>
+                        <a href="/WEB-KURSOVA/privacy-policy/index.html">Privacy Policy</a>
                     </li>
                     <li>
-                        <a href="/WEB/terms-of-use/index.html">Terms of Use</a>
+                        <a href="/WEB-KURSOVA/terms-of-use/index.html">Terms of Use</a>
                     </li>
                 </ul>
             </nav>
