--- a/index.html
+++ b/index.html
@@ -124,15 +124,26 @@
             padding: 20px;
             background-color: white;
             display: flex;
-            flex-direction: column;
-            gap: 16px;
+            flex-direction: row;
+            gap: 12px;
             max-width: 390px;
             width: 100%;
+            box-sizing: border-box;
+            height: 100%;
             box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
+        }
+        .card article {
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
         }
         .card h3 {
             color: #02b7ed;
             font-size: 24px;
+        }
+        .card img {
+            width: 140px;
+            height: 120px;
         }
         .card p {
             font-size: 18px;
@@ -142,6 +153,7 @@
             display: flex;
             align-items: center;
             gap: 8px;
+            height: 182px;
         }
         .concernes {
             padding: 60px;
@@ -243,16 +255,25 @@
             <h1>Which is your biggest concern about using the Internet?</h1>
             <div class="list">
                 <div class="card">
-                    <h3>Security</h3>
-                    <p>I want protection from hackers on public Wi-Fi and other unsecured networks.</p>
+                    <article>
+                        <h3>Security</h3>
+                        <p>I want protection from hackers on public Wi-Fi and other unsecured networks.</p>
+                    </article>
+                    <image src="./icons/concern-security.svg"/>
                 </div>
                 <div class="card">
-                    <h3>Privacy</h3>
-                    <p>I want to prevent my government, ISP and advertisers from tracking me.</p>
+                    <article>
+                        <h3>Privacy</h3>
+                        <p>I want to prevent my government, ISP and advertisers from tracking me.</p>
+                    </article>
+                    <image src="./icons/concern-privacy.svg"/>
                 </div>
                 <div class="card">
-                    <h3>Access</h3>
-                    <p>I want to access Netflix, Hulu, and other streaming services without being blocked.</p>
+                    <article>
+                        <h3>Access</h3>
+                        <p>I want to access Netflix, Hulu, and other streaming services without being blocked.</p>
+                    </article>
+                    <image src="./icons/concern-access.svg"/>
                 </div>
             </div>
         </section>
@@ -284,7 +305,7 @@
     </main>
     <footer>
         <section class="horizontal-row">
-            <p>© 2000-2025 CGP Holdings, Inc. All Rights Reserved.</p>
+            <blockquote>© 2000-2025 CGP Holdings, Inc. All Rights Reserved.</blockquote>
             <nav>
                 <ul class="horizontal-row">
                     <li>
