--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -163,7 +163,7 @@ We provide our Service Providers with the information needed for them to perform
     </main>
     <footer>
         <section class="horizontal-row">
-            <p>© 2000-2025 CGP Holdings, Inc. All Rights Reserved.</p>
+            <blockquote>© 2000-2025 CGP Holdings, Inc. All Rights Reserved.</blockquote>
             <nav>
                 <ul class="horizontal-row">
                     <li>
