--- a/terms-of-use/index.html
+++ b/terms-of-use/index.html
@@ -240,7 +240,7 @@ The various Affiliate Advertising Programs in which WhatIsMyIPAddress.com is a p
     </main>
     <footer>
         <section class="horizontal-row">
-            <p>© 2000-2025 CGP Holdings, Inc. All Rights Reserved.</p>
+            <blockquote>© 2000-2025 CGP Holdings, Inc. All Rights Reserved.</blockquote>
             <nav>
                 <ul class="horizontal-row">
                     <li>
