--- a/index.html
+++ b/index.html
@@ -4,206 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>What is my IP</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-        }
-        html {
-            scroll-behavior: smooth;
-        }
-        body {
-            background-color: #f2f3f4;
-        }
-        header {
-            padding-inline: 20px;
-            padding-block: 40px;
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            justify-content: space-between;
-            gap: 24px;
-        }
-        .logo {
-            width: 216px;
-            height: 71px;
-        }
-        footer {
-            padding-inline: 20px;
-            padding-block: 40px;
-            display: flex;
-            flex-direction: column;
-            gap: 24px;
-            background-color: #1f4872;
-            color: white;
-        }
-        footer a {
-            color: white;
-            text-decoration: none;
-        }
-        .horizontal-row {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-        }
-        .social-medias {
-            gap: 24px
-        }
-        nav ul {
-            gap: 10px;
-            list-style: none;
-            width: fit-content;
-            margin: auto;
-        }
-        .ip-detector {
-            padding: 60px;
-            display: flex;
-            gap: 24px;
-            background-color: #1f4872;
-            color: white;
-        }
-        .ip-detector .left {
-            display: flex;
-            flex-direction: column;
-            gap: 56px;
-            width: 100%;
-        }
-        .ip-detector .left .top, .ip-detector .left .bottom .left {
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-            width: 100%;
-        }
-        .ip-detector .left .top, .ip-detector .left .bottom {
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-        }
-        .ip-detector .left .content {
-            display: flex;
-            flex-direction: column;
-            gap: 2px;
-        }
-        .ip-detector .left .title {
-            font-size: 17px;
-        }
-        .content .ip {
-            background-color: #2d587f;
-            padding: 12px;
-            font-size: 22px;
-        }
-        .ip-detector .left .bottom .content {
-            display: flex;
-            flex-direction: column;
-            gap: 4px;
-            padding: 12px;
-            font-size: 17px;
-            background-color: #2d587f;
-        }
-        .ip-detector .left .bottom {
-            display: flex;
-            gap: 56px;
-            flex-direction: row;
-            align-items: center;
-        }
-        .ip-detector .left .bottom .right .button {
-            padding-inline: 32px;
-            padding-block: 20px;
-            font-size: 19px;
-            color: white;
-            border: none;
-            width: max-content;
-            background-color: #ff2939;
-            cursor: pointer;
-        }
-        button:disabled {
-            opacity: 0.5;
-            cursor: not-allowed !important;
-        }
-        .card {
-            padding: 20px;
-            background-color: white;
-            display: flex;
-            flex-direction: row;
-            gap: 12px;
-            max-width: 390px;
-            width: 100%;
-            box-sizing: border-box;
-            height: 100%;
-            box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
-        }
-        .card article {
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-        }
-        .card h3 {
-            color: #02b7ed;
-            font-size: 24px;
-        }
-        .card img {
-            width: 140px;
-            height: 120px;
-        }
-        .card p {
-            font-size: 18px;
-            color: #333333;
-        }
-        .list {
-            display: flex;
-            align-items: center;
-            gap: 8px;
-            height: 182px;
-        }
-        .concernes {
-            padding: 60px;
-            display: flex;
-            flex-direction: column;
-            gap: 24px;
-            align-items: center;
-        }
-        .container {
-            padding: 60px;
-            display: flex;
-            flex-direction: column;
-            gap: 24px;
-            align-items: center;
-        }
-        .player-container {
-            display: inline-block;
-            text-align: center;
-        }
-        .player-container video {
-            width: 100%;
-            border-radius: 10px;
-        }
-        .controls {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            gap: 10px;
-            margin-top: 10px;
-        }
-        .player-container button {
-            padding: 10px 15px;
-            font-size: 16px;
-            cursor: pointer;
-            border: none;
-            background-color: #007BFF;
-            color: white;
-            border-radius: 5px;
-        }
-        .player-container button:hover {
-            background-color: #0056b3;
-        }
-        .progress-container {
-            width: 100%;
-            margin-top: 10px;
-        }
-        .player-container input[type="range"] {
-            width: 100%;
-        }
-    </style>
+    <link href="./css/index.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
 </head>
 <body>
     <header>
@@ -348,116 +150,8 @@
         </nav>
     </footer>
 
-    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-
-    <script>
-        let map;
-        let marker;
-        const button = document.querySelector('#detect_ip');
-
-        const video = document.getElementById("myVideo");
-        const playPauseBtn = document.getElementById("playPauseBtn");
-        const muteBtn = document.getElementById("muteBtn");
-        const progressBar = document.getElementById("progressBar");
-        const speedControl = document.getElementById("speedControl");
-        const speedValue = document.getElementById("speedValue");
-
-        function togglePlayPause() {
-            if (video.paused || video.ended) {
-                video.play();
-                playPauseBtn.textContent = "⏸ Pause";
-            } else {
-                video.pause();
-                playPauseBtn.textContent = "▶ Play";
-            }
-        }
-
-        function increaseVolume() {
-            if (video.volume < 1) {
-                video.volume = Math.min(1, video.volume + 0.1);
-            }
-        }
-
-        function decreaseVolume() {
-            if (video.volume > 0) {
-                video.volume = Math.max(0, video.volume - 0.1);
-            }
-        }
-
-        function toggleMute() {
-            video.muted = !video.muted;
-            muteBtn.textContent = video.muted ? "🔊 Unmute" : "🔇 Mute";
-        }
-
-        // Update progress bar as video plays
-        video.addEventListener("timeupdate", () => {
-            progressBar.value = (video.currentTime / video.duration) * 100;
-        });
-
-        // Seek video when user interacts with progress bar
-        progressBar.addEventListener("input", () => {
-            video.currentTime = (progressBar.value / 100) * video.duration;
-        });
-
-        // Change playback speed
-        speedControl.addEventListener("input", () => {
-            video.playbackRate = speedControl.value;
-            speedValue.textContent = speedControl.value + "x";
-        });
-
-        function initMap() {
-            const defaultLat = 38.888798;
-            const defaultLon = -77.035299;
-
-            map = L.map('map').setView([defaultLat, defaultLon], 13);
-
-            L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-                attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
-            }).addTo(map);
-
-            marker = L.marker([defaultLat, defaultLon]).addTo(map)
-                .bindPopup("You are here")
-                .openPopup();
-        }
-
-        function updateMap(lat, lon) {
-            map.setView([lat, lon], 13);
-            marker.setLatLng([lat, lon]);
-            marker.setPopupContent("You are here").openPopup();
-        }
-
-        async function getUserIPandLocation() {
-            button.textContent = 'Loading...'
-            button.disabled = true;
-
-            try {
-                const response = await fetch('https://ipapi.co/json/');
-                if (!response.ok) {
-                    throw new Error('Failed to fetch IP data');
-                }
-                const data = await response.json();
-
-                document.querySelector('#ipv4').textContent = data.ip;
-                document.querySelector('#network').textContent = data.network;
-                document.querySelector('#asn').textContent = data.asn;
-                document.querySelector('#org').textContent = data.org;
-                document.querySelector('#city').textContent = data.city;
-                document.querySelector('#region').textContent = data.region;
-                document.querySelector('#country_name').textContent = data.country_name;
-
-                updateMap(data.latitude, data.longitude);
-            } catch (error) {
-                console.error("Error fetching IP information:", error);
-            }
-
-            button.textContent = 'Get my ip'
-            button.disabled = false;
-        }
-
-        button.addEventListener('click', getUserIPandLocation);
-
-        window.onload = initMap;
-    </script>
+    <script src="./js/ip.js"></script>
+    <script src="./js/podcast.js"></script>
 </body>
 </html>
